--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -1,5 +1,6 @@
 
 <h2>Employee List</h2>
+<h3>{{errorMessage}}</h3>
 <ul *ngFor="let employee of employees">
   <li>{{employee.id}}. {{employee.name}} - {{employee.age}}</li>
 </ul>
